--- a/linkedin_recommendations/users/templates/profiles.html
+++ b/linkedin_recommendations/users/templates/profiles.html
@@ -15,7 +15,7 @@
             <p>No profile picture available</p>
             {% endif %}
         </div>
-        <div class="user_name"> <a href="profile/{{profile.user.id}}">{{profile.user}}</a></div>
+        <div class="user_name"> <a href="profile/{{profile.user}}">{{profile.user}}</a></div>
         
     </div>
 </div>
