user profile update feature done

--- a/linkedin_recommendations/users/templates/includes/nav.html
+++ b/linkedin_recommendations/users/templates/includes/nav.html
@@ -23,7 +23,7 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 
         </form>
-        <img style="background-color: black; height: 50px; width: 50px;" src="{{ profile.profile_pic.url }}" alt="">
+        <img style="background-color: black; height: 50px; width: 50px;" src="{{ request.user.profile_pic.url }}" alt="">
 
     </div>
 </nav>
