--- a/linkedin_recommendations/users/templates/home.html
+++ b/linkedin_recommendations/users/templates/home.html
@@ -13,8 +13,14 @@
 {% comment %} this will enable to use the login urls {% endcomment %}
 <h2>Google Login</h2>
 <a href="{% provider_login_url 'google' %}?next=/">Login With Google</a>
-
 {% endif %}
+
+{% for post in all_posts %}
+<h1>{{post.user.username}}</h1>
+<img src="{{post.post_img.url}}" alt="">
+<p>{{post.caption}}</p>
+
+{% endfor %}
 {% endblock content %}
 {% comment %} this will provide the url for google signin  {% endcomment %}
 
