like feature added

--- a/linkedin_recommendations/users/templates/upload_post.html
+++ b/linkedin_recommendations/users/templates/upload_post.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-
+{% include "includes/nav.html" %}
 <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="post">Choose image</label>
